--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "dependencies": {
     "next": "13.1.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^4.4.0"
   },
   "devDependencies": {
-    "postcss": "^8.3.0",
-    "autoprefixer": "^10.3.0"
+    "@types/node": "^22.13.1",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.3.0",
+    "postcss": "^8.3.0"
   },
   "scripts": {
     "dev": "next dev",
