--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next.config.js"
+    "next.config.ts"
   ],
   "exclude": [
     "node_modules"
